FOLREL-612: Update to mod-linked-data Java 21 (#57)
* FOLREL-612: Update to mod-linked-data Java 21

* FOLREL-612: Update buildNode agent